# cortex-runtime

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  scorecard.yml  security.yml
docs/: api.md  architecture.md  index.md
docs/guides/: minimal-agent.md  plugin.md  provider.md
examples/: README.md  anthropic_agent.py  demo_agent.py  echo_agent.py  send_task.py
src/cortex_runtime/: __init__.py  bus.py  bus_redis.py  consumer.py  context_runtime.py  dispatch.py  dispatch_models.py  env.py  exceptions.py  memory.py  models.py  prompt_utils.py  provider.py  redis_keys.py
src/cortex_runtime/plugins/: __init__.py  exceptions.py  models.py  protocol.py  registry.py
src/cortex_runtime/providers/: __init__.py  _loop_driver.py  tool_executor.py
src/cortex_runtime/session/: __init__.py  exceptions.py  manager.py  models.py  store.py
tests/: test_smoke.py
