[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-runtime"
version = "0.1.1"
description = "Open agent orchestration runtime — bus, dispatch, turn loop, and plugin system"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "pydantic>=2.0",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
plugins = [
    "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/cortex-mesh/cortex-runtime"
Repository = "https://github.com/cortex-mesh/cortex-runtime"

[project.entry-points."cortex_runtime.plugins"]
# Third-party plugins register here. Example:
# my-plugin = my_package.plugin:MyPlugin

[tool.hatch.build.targets.wheel]
packages = ["src/cortex_runtime"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cortex_runtime"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
